# MP

./: Comandos compilar
1.- Tipos Aritm__ticos/: Ejer1  Ejer2  Ejer3  Ejer4  Ejer5  Ejer7  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio7.cpp
2.- Gestión de proyectos/: Makefile  README
2.- Gestión de proyectos/doc/: area.pts  central.pts  delimitar.pts  longitud.pts
2.- Gestión de proyectos/include/: avanzar.h  circulo.h  punto.h  rectangulo.h
2.- Gestión de proyectos/src/libs/: avanzar.cpp  circulo.cpp  punto.cpp  rectangulo.cpp
2.- Gestión de proyectos/src/mains/: area.cpp  central.cpp  delimitar.cpp  longitud.cpp
3.- Esteganograf__a_texto/: #include _codificar.h_  Makefile  salida
3.- Esteganograf__a_texto/doc/html/: codificar_8h.html  codificar_8h.js  codificar_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  imagenES_8h.html  navtreeindex0.js
3.- Esteganograf__a_texto/include/: codificar.h
3.- Esteganograf__a_texto/src/lib/: codificar.cpp
3.- Esteganograf__a_texto/src/main/: ocultar.cpp  revelar.cpp
4.- Matrices booleanas/: calcular.cpp  matriz_bit1.cpp  matriz_bit1.h  matriz_bit2.cpp  matriz_bit2.h  matriz_bit3.cpp  matriz_bit3.h  matriz_bit4.cpp  matriz_bit4.h  matriz_operaciones.cpp  matriz_operaciones.h
FINAL/: reversi.cpp  tab
FINAL/Nuevo directorio/: Makefile  hola.txt  reversi.cpp
FINAL/Nuevo directorio/Jugador/: class_Jugador.cpp  class_Jugador.h
FINAL/Nuevo directorio/Matriz/: class_Matriz.cpp  class_Matriz.h
FINAL/Nuevo directorio/Tablero/: class_Tablero.cpp  class_Tablero.h
FINAL/V1/: reversi.cpp
FINAL/V1/Jugador/: class_Jugador.cpp  class_Jugador.h
FINAL/V1/Matriz/: class_Matriz.cpp  class_Matriz.h
FINAL/V2/: Makefile
PracticasConCppMetProg17/: ejercicio1.cpp
PracticasConCppMetProg17/celdas/: celdas.cpp
PracticasConCppMetProg17/esteganografia/: Makefile
PracticasConCppMetProg17/gestionDeProyectos/: central  central.cpp  ejemplo_sumatoria.cpp
PracticasConCppMetProg17/reversi/: leeme.txt
PracticasConCppMetProg17/reversi/version3/: .gitignore  CMakeLists.txt  leeme.txt
PracticasConCppMetProg17/reversi/version3/doxy/: Doxyfile  footer.html  introduccion.doxy
PracticasConCppMetProg17/reversi/version3/lotelo/: CMakeLists.txt
PracticasConCppMetProg17/reversi/version3/otelo/: CMakeLists.txt  test_tablero.cpp  ventana.cpp  ventana.h
PracticasConCppMetProg17/reversi/version3/otelo/partidas/: partida_auto.otelo  partida_estandar.otelo  partida_micro.otelo  partida_mini.otelo  partida_nueva.otelo
PracticasConCppMetProg17/reversi/version3/reversi/: CMakeLists.txt
PracticasConCppMetProg17/vectores/: a.out  mostrar.cpp
(+8 files in other folders)
